fixed overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@ $secondaryColor: #524c40;
 body {
   margin: 0; /* Remove default margin */
   padding: 0; /* Remove default padding */
-  overflow: hidden; /* Prevent scrollbars if content overflows */
+
 }
 
 .container {
